# Communication-Breakdown

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
mock-encryption/: README.md  package-lock.json
mock-encryption-lines/: package-lock.json  package.json
mock-encryption-lines/frontend/src/: App.js
mock-encryption/backend/: main.py
mock-encryption/frontend/: README.md  package-lock.json
mock-encryption/frontend/src/: App.js
mvp1-location-privacy/: .gitignore  README.md  pyproject.toml
mvp1-location-privacy/backend/: README.md  main.py  node_subscriber.py  nodes.py  publisher.py
mvp1-location-privacy/frontend/: README.md  package.json
mvp1-location-privacy/frontend/public/: index.html
mvp1-location-privacy/frontend/src/: App.js
mvp1-mock/: package.json
mvp1-mock/backend/: main.py
mvp1-mock/frontend/public/: index.html
mvp1-mock/frontend/src/: index.css
mvp2-broadcast-simulation/: README.md  package-lock.json  pyproject.toml
mvp2-broadcast-simulation/backend/: requirements.txt
mvp2-crypto/: MVP_B2_GAP_ANALYSIS.md  PRESENTATION_NOTES.md  README.md  package.json
mvp2-crypto/backend/: README.md  crypto_utils.py  economy.py  main.py
mvp2-crypto/frontend/src/: App.js  index.css
mvp3-mesh-communication/: README.md  VENV_README.md  package-lock.json  pyproject.toml
mvp3-mesh-communication/backend/: PRESENTATION_DEMO_README.md  main.py  presentation_demo.py  requirements.txt
mvp3-mesh-communication/frontend/: package.json
mvp3-mesh-communication/frontend/src/: App.js  index.css
mvp3-mobile/: PROJECT_SUMMARY.md  QUICKSTART.md  TESTING_GUIDE.md  UPDATE_SUMMARY.md
mvp3-mobile/backend/: README.md  main.py  requirements.txt
mvp3-mobile/frontend/: README.md
mvp3-mobile/frontend/src/: App.js  index.css
mvp4-mobile-accountability/: .gitignore  README.md  pyproject.toml  verify-setup.ps1
mvp4-mobile-accountability/backend/: crypto_utils.py
mvp4-mobile-accountability/frontend/: package.json
mvp4-mobile-accountability/frontend/public/: index.html
