[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp1-location-privacy"
version = "1.0.0"
description = "Personnel accountability with location privacy using geographic area queries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "University of Rhode Island - Industrial Systems Engineering"}
]
keywords = ["emergency-management", "personnel-accountability", "privacy", "location-privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/URI-ISE/Rapid-Response"
Repository = "https://github.com/URI-ISE/Rapid-Response"
