[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp4-mobile-accountability"
version = "1.0.0"
description = "Mobile-responsive personnel accountability with cryptographic verification and privacy controls"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "University of Rhode Island - Industrial Systems Engineering"}
]
keywords = ["mobile", "personnel-accountability", "cryptography", "privacy", "emergency-response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "cryptography",
    "ecdsa",
]

[project.urls]
Homepage = "https://github.com/URI-ISE/Rapid-Response"
Repository = "https://github.com/URI-ISE/Rapid-Response"
